update jsdoc with README, @class, @lends, @function defs for Word and Letter members

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "wordGuessHangmanCLI",
   "main": "index.js",
   "scripts": {
-    "doc": "jsdoc -c jsdoc.json"
+    "doc": "jsdoc -c jsdoc.json -R README.md"
   },
   "repository": {
     "type": "git",
